--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-midnight
+theme: minima
+title: "Kriti Dey"
+description: "Market Research | Data Analytics | GenAI Enthusiast"
+
